fix row wrap on tags, progress on post update

--- a/react-vite/src/components/Post/Post.css
+++ b/react-vite/src/components/Post/Post.css
@@ -66,6 +66,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: flex-start;
     align-items: flex-start;
 }
