--- a/react-vite/src/components/PostUpdate/PostUpdate.css
+++ b/react-vite/src/components/PostUpdate/PostUpdate.css
@@ -98,6 +98,7 @@ input[type=file]::file-selector-button {
   }
 
 .update-customtag-container {
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -110,6 +111,7 @@ input[type=file]::file-selector-button {
     border: 1px solid whitesmoke;
     border-radius: 12px;    
     min-height: 25px;
+    color: whitesmoke;
 }
 
 .postupdate-tagimage-container {
